# circuit-tools

./: Cargo.toml  README.md
examples/: circuit-layout.rs
src/: cached_region.rs  cell_manager.rs  constraint_builder.rs  gadgets.rs  lib.rs  memory.rs  util.rs
src/tests/: lookup_and_cell.rs  mod.rs  query_and_branch.rs  shuffle.rs
