[package]
name = "circuit-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
plotters = { version = "0.3.0", optional = true }
zkevm-circuits = {git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git"}
rand = "0.8"

[features]
default = ["dev-graph", "zkevm-circuits/test"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]

[[example]]
name = "circuit-layout"
required-features = ["dev-graph"]
